Edit start button and fix top spacing

--- a/start/css/main.css
+++ b/start/css/main.css
@@ -35,14 +35,13 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 5px;
 }
 
 .game {
   width: 800px;
   height: 600px;
-  border-top: 2.5px solid black;
-  border-left: 2.5px solid black;
-  border-right: 2px solid black;
+  border: 2.5px solid black;
 
 
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
